Bug 1477636 - Hide the horizontal scrollbar in Prefs paneSelector and make the labels wrap. r=jorgk

--- a/mail/themes/linux/mail/preferences/aboutPreferences.css
+++ b/mail/themes/linux/mail/preferences/aboutPreferences.css
@@ -8,6 +8,10 @@
   font-size: 1.11em;
 }
 
+radio[pane] > .radio-label-box {
+  font-size: 1.2rem;
+}
+
 checkbox {
   -moz-binding: url("chrome://global/content/bindings/checkbox.xml#checkbox") !important;
 }
