--- a/suite/themes/classic/mac/communicator/communicator.css
+++ b/suite/themes/classic/mac/communicator/communicator.css
@@ -184,6 +184,12 @@ treecols:-moz-lwtheme {
   list-style-image: url("chrome://communicator/skin/icons/geo.png");
 }
 
+.messageImage[value="persistent-storage"] {
+  list-style-image: url("chrome://communicator/skin/icons/notification-icons.svg#persistent-storage");
+  width: 16px;
+  height: 16px;
+}
+
 .messageImage[value="webNotifications"] {
   list-style-image: url("chrome://communicator/skin/icons/notification-16.png");
 }
